--- a/The Night Porter/Base.lproj/Main.storyboard
+++ b/The Night Porter/Base.lproj/Main.storyboard
@@ -128,8 +128,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F8T-tm-jqQ">
-                                <rect key="frame" x="18" y="587" width="86" height="30"/>
+                                <rect key="frame" x="18" y="592" width="109" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Banan mode"/>
                                 <connections>
                                     <action selector="changeBackground:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OMI-yb-83N"/>
